--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+.square {
+  background: white;
+  border: 1px solid gray;
+  float: left;
+  margin-right: -1px;
+  margin-left: -1px;
+  padding: 0;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 80px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.border-row {
+  clear: both;
+  content: '';
+  display: table;
+}
+
+.game {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+}
+
+ul {
+  padding-left: 30px;
+}
+.game-info {
+  margin-left: 20px;
+}
+.status {
+  margin-bottom: 10px;
+}
